6-6.评分和全选反选

--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
 		<a href="web/wangyi/index.html">网易严选纯静态网页</a>
 		<br>
 		<a href="web/0605/index.html">6-05,鼠标移入信息根据该项滑动</a>
+		<br>
+		<a href="web/0606/6.06-1.html">6-06.1,评分练习</a>
+		<br>
+		<a href="web/0606/6.06-2.html">6-06.2,全选反选</a>
 	</body>
 </html>
