0608支付宝页面

--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
 		<a href="web/0606/6.06-1.html">6-06.1,评分练习</a>
 		<br>
 		<a href="web/0606/6.06-2.html">6-06.2,全选反选</a>
+		<br>
+		<a href="web/0608/0608.html">6-08支付宝页面</a>
 	</body>
 </html>
