0609页面图片根据数组循环滑出。并显示相应文字信息

--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
 		<a href="web/0606/6.06-2.html">6-06.2,全选反选</a>
 		<br>
 		<a href="web/0608/0608.html">6-08支付宝页面</a>
+		<br>
+		<a href="web/0609/6.09.html">6-09页面图片根据数组循环滑出。并显示相应文字信息</a>
 	</body>
+	
 </html>
