--- a/index.html
+++ b/index.html
@@ -26,8 +26,20 @@
 		<a href="web/0608/0608.html">6-08支付宝页面</a>
 		<br>
 		<a href="web/0609/6.09.html">6-09页面图片根据数组循环滑出。并显示相应文字信息</a>
-	<br>
+		<br>
 		<a href="web/0613/6.13.html">6-13商品倒计时下架。显示已下架商品</a>
+		<br>
+		<a href="web/0614/6.14.html">6-14文字搬运</a>
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
 	</body>
 	
 </html>
