--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<br>
 		<a href="web/0613/6.13.html">6-13商品倒计时下架。显示已下架商品</a>
 		<br>
-		<a href="web/0614/6.14.html">6-14文字搬运</a>
+		<a href="web/0614/6.14.html">6-14文字搬运，可中途反搬运</a>
 		
 		
 		
