--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 		<a href="web/0614/6.14.html">6-14文字搬运，可中途反搬运</a>
 		<br>
 		<a href="web/0616/6.16.html">6-16图片下落小游戏</a>
-		
+		<br>
+		<a href="web/0616/6.16-1.html">6-16【英文消除游戏】</a>
 		
 		
 		
