--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<h1>CSS3</h1>
 		<a href="CSS3/6.20.html">6-20【滴滴选项滑动】</a>
 		<br />
-		<a href="CSS3/6.22.html">6-22【3D盒子】</a>
+		<a href="CSS3/6.22.html">6-22【3D盒子旋转】</a>
 		
 		
 		
