--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 		<a href="CSS3/6.20.html">6-20【滴滴选项滑动】</a>
 		<br />
 		<a href="CSS3/6.22.html">6-22【3D盒子旋转】</a>
-		
-		
+		<br />
+		<a href="CSS3/6.23-1.html">6.23-1、图片3D前后切换</a>
 		
 	</body>
 	
