--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 		<a href="CSS3/6.22.html">6-22【3D盒子旋转】</a>
 		<br />
 		<a href="CSS3/6.23-1.html">6.23-1、图片3D前后切换</a>
-		
+		<br />
+		<a href="CSS3/6.23-2.html">6.23-2,图片旋转切割转换.html</a>
 	</body>
 	
 </html>
