--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 		<a href="CSS3/6.23-1.html">6.23-1、图片3D前后切换</a>
 		<br />
 		<a href="CSS3/6.23-2.html">6.23-2,图片旋转切割转换.html</a>
+		<hr />
+		<h1>JS 中级</h1>
+		<a href="web/0629/6.29.html">6.29,模拟滚动条</a>
 	</body>
 	
 </html>
