--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 		<hr />
 		<h1>JS 中级</h1>
 		<a href="web/0629/6.29.html">6.29,模拟滚动条</a>
+		<hr />
+		<h1>JQuery</h1>
+		<a href="JQuery/7.03-3.html">7.03-3、银行卡编辑</a>
 	</body>
 	
 </html>
