--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 		<hr />
 		<h1>JQuery</h1>
 		<a href="JQuery/7.03-3.html">7.03-3、银行卡编辑</a>
+		<br />
+		<a href="JQuery/7.04-3.html">7.04-3、左右内容切换</a>
+		
 	</body>
 	
 </html>
