--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
 		<br />
 		<a href="JQuery/7.04-3.html">7.04-3、左右内容切换</a>
 		
+		
+		<hr />
+		<h1>天猫动态</h1>
+		<a href="TianMao/index.html">天猫动态</a>
 	</body>
 	
 </html>
