--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
 		<a href="JQuery/7.03-3.html">7.03-3、银行卡编辑</a>
 		<br />
 		<a href="JQuery/7.04-3.html">7.04-3、左右内容切换</a>
-		
-		
+		<hr />
+		<h1>HTML5</h1>
+		<a href="HTML5/7.07-1.html">7.07-1，模拟视频播放器（暂时测试Firefox 浏览器）</a>
 		<hr />
 		<h1>天猫动态</h1>
 		<a href="TianMao/index.html">天猫动态</a>
