--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 		<hr />
 		<h1>HTML5</h1>
 		<a href="HTML5/7.07-1.html">7.07-1，模拟视频播放器（暂时测试Firefox 浏览器）</a>
+		<br />
+		<a href="HTML5/7.07-2.html">7.07-2、音乐播放器.html</a>
+		
 		<hr />
 		<h1>天猫动态</h1>
 		<a href="TianMao/index.html">天猫动态</a>
