--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 		<a href="HTML5/7.07-1.html">7.07-1，模拟视频播放器（暂时测试Firefox 浏览器）</a>
 		<br />
 		<a href="HTML5/7.07-2.html">7.07-2、音乐播放器.html</a>
-		
+		<hr />
+		<h1>BOOTSTROP</h1>
+		<a href="bootStrop/7.14-1、bootstrap.html">7.14-1、bootstrap实例.html</a>
 		<hr />
 		<h1>天猫动态</h1>
 		<a href="TianMao/index.html">天猫动态</a>
