--- a/bootStrop/7.14-1、bootstrap.html
+++ b/bootStrop/7.14-1、bootstrap.html
@@ -8,7 +8,8 @@
 		<script type="text/javascript" src="js/bootstrap.min.js" ></script>
 		<style>
 			body{
-				/*min-width: 550px;*/
+				padding: 0;
+				margin: 0;
 			}
 			.top{
 				background: black;
