--- a/index.html
+++ b/index.html
@@ -3,66 +3,21 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<style type="text/css">
+			a{
+				display: inline-block;
+				background: pink;
+				margin-top: 5px;
+				width: 100px;
+				text-align: center;
+				color: white;
+			}
+		</style>
 	</head>
 	<body>
-		<h1>JS</h1>
-		<a href="web/5.31-2.html">5.31、总件数，价格</a>
-		<br/>
-		<a href="web/5.27.html">5.27、图片轮换</a>
-		<br>
-		<a href="web/6.01-1.html">6.1、选项图片层级切换</a>
-		<br>
-		<a href="web/beijintupian.html">5.26-3、鼠标移入显示图片</a>
-		<br>
-		<a href="web/6-02/RANK.html">6.02、观看排行榜，鼠标移入产生效果</a>
-		<br>
-		<a href="web/wangyi/index.html">网易严选纯静态网页</a>
-		<br>
-		<a href="web/0605/index.html">6-05,鼠标移入信息根据该项滑动</a>
-		<br>
-		<a href="web/0606/6.06-1.html">6-06.1,评分练习</a>
-		<br>
-		<a href="web/0606/6.06-2.html">6-06.2,全选反选</a>
-		<br>
-		<a href="web/0608/0608.html">6-08支付宝页面</a>
-		<br>
-		<a href="web/0609/6.09.html">6-09页面图片根据数组循环滑出。并显示相应文字信息</a>
-		<br>
-		<a href="web/0613/6.13.html">6-13商品倒计时下架。显示已下架商品</a>
-		<br>
-		<a href="web/0614/6.14.html">6-14文字搬运，可中途反搬运</a>
-		<br>
-		<a href="web/0616/6.16.html">6-16图片下落小游戏</a>
-		<br>
-		<a href="web/0616/6.16-1.html">6-16【英文消除游戏】</a>
-		<hr />
-		<h1>CSS3</h1>
-		<a href="CSS3/6.20.html">6-20【滴滴选项滑动】</a>
+		<a href="study.html">学习</a>
 		<br />
-		<a href="CSS3/6.22.html">6-22【3D盒子旋转】</a>
-		<br />
-		<a href="CSS3/6.23-1.html">6.23-1、图片3D前后切换</a>
-		<br />
-		<a href="CSS3/6.23-2.html">6.23-2,图片旋转切割转换.html</a>
-		<hr />
-		<h1>JS 中级</h1>
-		<a href="web/0629/6.29.html">6.29,模拟滚动条</a>
-		<hr />
-		<h1>JQuery</h1>
-		<a href="JQuery/7.03-3.html">7.03-3、银行卡编辑</a>
-		<br />
-		<a href="JQuery/7.04-3.html">7.04-3、左右内容切换</a>
-		<hr />
-		<h1>HTML5</h1>
-		<a href="HTML5/7.07-1.html">7.07-1，模拟视频播放器（暂时测试Firefox 浏览器）</a>
-		<br />
-		<a href="HTML5/7.07-2.html">7.07-2、音乐播放器.html</a>
-		<hr />
-		<h1>BOOTSTROP</h1>
-		<a href="bootStrop/7.14-1、bootstrap.html">7.14-1、bootstrap实例.html</a>
-		<hr />
-		<h1>天猫动态</h1>
-		<a href="TianMao/index.html">天猫动态</a>
+		<a href="production.html">作品</a>
 	</body>
 	
 </html>
