--- a/production.html
+++ b/production.html
@@ -20,5 +20,7 @@
 		<a href="bootStrop/7.14-1、bootstrap.html">bootstrap实例.html</a>
 		<br />
 		<a href="TianMao/index.html">天猫动态</a>
+		<br />
+		<a href="JsGanme/one.html">JS游戏-迷宫光圈</a>
 	</body>
 </html>
