--- a/JsGanme/five.html
+++ b/JsGanme/five.html
@@ -69,6 +69,8 @@
 		</style>
 	</head>
 	<body>
+		<h1>关卡五</h1>
+		
 		<div class="top" gaNo = '4'>
 			<div class="whit"></div>
 			<div class=""></div>
@@ -132,7 +134,6 @@
 			</div>
 		</div>
 		<strong>说明：上下左右移动 一次性吃完所有光圈 ，不得回走</strong>
-		<em>提示: 暂不支持goole浏览器</em>
 	</body>
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js" ></script>
 	<script type="text/javascript" src="js/game.js" ></script>
