--- a/JsGanme/one.html
+++ b/JsGanme/one.html
@@ -65,9 +65,11 @@
 				margin-top: 30px;
 				color: red;
 			}
+			
 		</style>
 	</head>
 	<body>
+		<h1>关卡一</h1>
 		<div class="top" gaNo = '0'>
 			<div class="yuan"></div>
 			<div class="whit"></div>
@@ -103,7 +105,6 @@
 			</div>
 		</div>
 		<strong>说明：上下左右移动 一次性吃完所有光圈 ，不得回走</strong>
-		<em>提示: 暂不支持goole浏览器</em>
 	</body>
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js" ></script>
 	<script type="text/javascript" src="js/game.js" ></script>
