--- a/JsGanme/three.html
+++ b/JsGanme/three.html
@@ -68,6 +68,8 @@
 		</style>
 	</head>
 	<body>
+		<h1>关卡三</h1>
+		
 		<div class="top" gaNo = '2'>
 			<div class="whit"></div>
 			<div class=""></div>
@@ -103,9 +105,7 @@
 			</div>
 		</div>
 		<strong>说明：上下左右移动 一次性吃完所有光圈 ，不得回走</strong>
-		<em>提示: 暂不支持goole浏览器</em>
 	</body>
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js" ></script>
 	<script type="text/javascript" src="js/game.js" ></script>
-	</script>
 </html>
