--- a/JsGanme/two.html
+++ b/JsGanme/two.html
@@ -63,6 +63,8 @@
 		</style>
 	</head>
 	<body>
+		<h1>关卡二</h1>
+		
 		<div class="top" gaNo = '1'>
 			<div class=""></div>
 			<div class=""></div>
@@ -103,7 +105,6 @@
 			</div>
 		</div>
 		<strong>说明：上下左右移动 一次性吃完所有光圈 ，不得回走</strong>
-		<em>提示: 暂不支持goole浏览器</em>
 	</body>
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js" ></script>
 	<script type="text/javascript" src="js/game.js" ></script>
