--- a/study.html
+++ b/study.html
@@ -48,6 +48,8 @@
 		<a href="JQuery/7.03-3.html">7.03-3、银行卡编辑</a>
 		<br />
 		<a href="JQuery/7.04-3.html">7.04-3、左右内容切换</a>
+		<br />
+		<a href="javaScript/7.28-1.html">7.28-1键盘</a>
 		<hr />
 		<h1>HTML5</h1>
 		<a href="HTML5/7.07-1.html">7.07-1，模拟视频播放器（暂时测试Firefox 浏览器）</a>
